# CommaAgents

./: .gitignore  .gitleaksignore  CHANGELOG.md  LICENSE.md  PLAN.md  README.md  TODOs.md  biome.json  bunfig.toml  discord_bot_example.py  knip.json  netlify.toml  package.json  playground.py  pnpm-lock.yaml  pyproject.toml  test_strategy.yaml  todo.md  tsconfig.json
.githooks/: pre-push
.github/: RELEASING.md
.github/workflows/: bootstrap-npm.yml  package-validation.yml  python-publish.yml  release.yml  security.yml
.temp/: test_user_agent.py
comma_agents/: __init__.py
comma_agents/agents/: __init__.py  base_agent.py  code_agent.py  user_agent.py
comma_agents/cli/: main.py
comma_agents/code_interpreters/: __init__.py  code_interpreter.py  code_interpreter_language_handler.py
comma_agents/flows/: __init__.py  base_flow.py  broadcast_flow.py  cycle_flow.py  cycle_observer_flow.py  infinite_cycle_flow.py  sequential_flow.py
comma_agents/hub/: __init__.py  agents.py  old_magic_remote_auto_import__init__.py.bk  utils.py
comma_agents/prompts/: __init__.py  base_prompt.py
comma_agents/strategies/: strategy.py
commaagents/agents/: __init__.py  base_agent.py
commaagents/flows/: __init__.py  base_flow.py  cycle_flow.py  sequential_flow.py
docs/: file-tools-todo.md  netlify.toml  next.config.mjs  package.json  patch-envelope.md  source.config.ts  tsconfig.json
docs/app/: layout.tsx
docs/components/: mdx.tsx
docs/lib/: layout.shared.tsx
docs/source/: conf.py  (+1 more)
end-to-end-tests/: agent-conversations.e2e.test.ts  agent-streaming.e2e.test.ts  agent-tool-calling.e2e.test.ts  flows-composition.e2e.test.ts  package.json  strategy-execution.e2e.test.ts
examples/: README.md  discord_bot_example.py  example_strategy.yaml  full_quick_start.py  hub_example.py  hub_test.py  llm_automate_file_documentation.py  llm_automate_test_generation.py  memgpt_like_agent.py  package.json  playground.py  tsconfig.json
patches/: ink@7.0.1.patch
prompts/: manager.md  standards-summarizer.md
scripts/: build-public-package.ts  release-version.constants.ts  release-version.test.ts  release-version.ts  release-version.types.ts  release-version.utils.ts  validate-public-packages.ts
tests/: test_base_agent.py  test_flows.py
(+298 files in other folders)
