[tool.poetry]
name = "comma-agents"
version = "0.0.9"
description = "A way to elevate your AI workflow with Comma Agents, a versatile Python library designed for seamless AI model integration and automation. Perfect for developers looking to enhance efficiency in local or remote environments, it offers customizable AI flows and scalable solutions. Streamline your projects with Comma Agents, the ideal tool for Python-based AI automation."
authors = ["Nathaniel Hatch-Martinez <nhm@cloai.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://commaagents.com/"
repository = "https://github.com/CloAI/CommaAgents"
documentation = "https://commaagents.com/docs"

[tool.poetry.scripts]
comma = "comma_agents.cli.main:cli"

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
gitpython = "^3.1.40"
click = "^8.1.7"
pyyaml = "^6.0.1"
pydantic = "^2.6.4"
platformdirs = "^4.2.2"
xxhash = "^3.5.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-mock = "^3.12.0"

[tool.poetry.group.docs.dependencies]
furo = "^2023.9.10"
sphinx = "^7.2.6"
m2r2 = "^0.3.3.post2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"